# autolua_vision

./: CMakeLists.txt  install.sh
docs/: _Bitmap.lua  alv.lua
src/: Bitmap.cc  Bitmap.h  CommonBitmap.cpp  CommonBitmap.h  lua_vision.cc  lua_vision.h  vision.h  vision_color.cc  vision_color.h  vision_feature.cc  vision_feature.h  vision_util.h
tests/: CMakeLists.txt  test_encode.cc
tests/lua/: test.lua
